# FastKnock

./: Clustering_Reactions.py  FastKnock.py  Gene_Rule.py  PreProcessing.py  constructSubTree.py  eliminate_list.txt  findingCoKnockOut.py  identifyGuaranteedSolution.py  identifyMaximizedSolution.py  identifyTargetSpace.py  knockoutStrategy_2.txt  p1_2.txt  p1_3.txt  p2_2.txt  p3_2.txt  p4_2.txt  p4_3.txt  アルコール事業法.md  凝集性酵母の開発.md  前処理調査.md  用語集.md  論文メモ.md
Konishi/考察_実験案/: ①有効な実験アプローチ案 ver 2.docx  ②エタノール生産能向上に関する報告書（２）.docx  ③エタノール生産能向上に関する報告書（１）.docx
Konishi/論文のサマリ/: 文献1.docx  文献10 .docx  文献11 .docx  文献12 .docx  文献13 .docx  文献14 .docx  文献15 .docx  文献16 .docx  文献17 .docx  文献18 .docx  文献19 .docx  文献2 .docx  文献20 .docx  文献21 .docx  文献22 .docx  文献23 .docx  文献24 .docx  文献25 .docx  文献26 .docx  文献27 .docx  文献28 .docx  文献29 .docx  文献3.docx  文献30 .docx  文献31 .docx  文献32 .docx  文献33 .docx  文献34 .docx  文献35 .docx  文献36 .docx  文献39 .docx  文献4.docx  文献40.docx  文献43 .docx  文献44 .docx  文献45 .docx  文献47 .docx  文献48 .docx  文献49 .docx  文献5 .docx  (+15 more)
python/: 20250508_excel_copy.py  20250508_pairplots.py
python/FBA/: geckopy_ecYeast8.ipynb  pyproject.toml  yeast_GEM_9_0_2_FBA.ipynb
python/FBA/models/heme_production_ecYeastGEM-1.0/: README.md
python/FBA/models/heme_production_ecYeastGEM-1.0/code/: find_hemeTargets_Sce.m  getGeneMetMatrix.m  getOptimalStrain.m  solveECmodel.m
python/FBA/models/heme_production_ecYeastGEM-1.0/code/non-ecFSEOF-analysis/: compareDist.m
python/FBA/models/heme_production_ecYeastGEM-1.0/results/ecModel_targets/: candidates_mech_validated.txt  candidates_priority.txt  compatible_genes_results.txt  genesResults_ecFSEOF.txt
python/FBA_KNOCK/: pyproject.toml  yeast_GEM_9_0_2_FBA.ipynb
python/FastKnock/: main.py  pyproject.toml
python/GECKO/: main.py  pyproject.toml
python/GECKO/notebook/: geckopy_ecYeast8.ipynb
python/models/heme_production_ecYeastGEM-1.0/code/: enzymeUsage_FVA.m  getMutant.m  robust_ecFSEOF.m
代謝工学/: GECKOpy_doc.txt
(+4 files in other folders)
