[project]
name = "fba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.22"
dependencies = [
    "cameo>=0.11.2",
    "cobra==0.20.0",
    "cplex>=22.1.2.0",
    "docplex>=2.29.245",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy==1.23.5",
    "optlang>=1.4.4",
    "pandas==1.5.3",
    "pip>=25.1",
    "pulp>=3.1.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
