[project]
name = "gecko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.22"
dependencies = [
    "cobra==0.27.0",
    "geckopy",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "scipy>=1.13.1",
]

[tool.uv.sources]
geckopy = { path = "geckopy" }
